2008-11-12  Jakub Jelinek  <jakub@redhat.com>

	PR c++/34269
	* g++.dg/cpp0x/decltype13.C: New test.
	* g++.dg/cpp0x/decltype-33837.C: Adjust dg-error pattern.
	* g++.dg/cpp0x/pr33839.C: Likewise.

	PR target/35366
	PR fortran/33759
	* gfortran.dg/hollerith.f90: Don't assume a 32-bit value
	stored into logical variable will be preserved.
	* gfortran.dg/transfer_simplify_4.f90: Remove undefined
	cases.  Run at all optimization levels.  Add a couple of
	new tests.
	* gfortran.dg/hollerith5.f90: New test.
	* gfortran.dg/hollerith_legacy.f90: Add dg-warning.

	PR c++/35334
	* gcc.dg/pr35334.c: New test.
	* g++.dg/other/error29.C: New test.

2008-11-12  Tobias Burnus  <burnus@net-b.de>

	PR fortran/38065
	* gfortran.dg/private_type_11.f90: New test.
	* gfortran.dg/private_type_12.f90: New test.

2008-11-10  Catherine Moore  <clm@codesourcery.com>

	* gcc.target/mips/no-smartmips-lwxs.c: New test.
	* gcc.target/mips/no-smartmips-ror-1.c: New test.

2008-11-10  Kaz Kojima  <kkojima@gcc.gnu.org>

	* gcc.target/sh/pr37514.c: New test.

2008-11-10  Eric Botcazou  <ebotcazou@adacore.com>

	* g++.dg/other/anon5.C: Skip on Solaris.

2008-11-10  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/pack11.adb: New test.

2008-11-10  Jakub Jelinek  <jakub@redhat.com>

	PR c++/38021
	* g++.dg/cpp0x/enum1.C: New test.

2008-11-02  Ralph Loader  <suckfish@ihug.co.nz>

	PR middle-end/37807
	PR middle-end/37809
	* gcc.target/i386/mmx-8.c: New test.

2008-11-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37836
	* gfortran.dg/minmaxval_1.f90: New test.

2008-11-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_boolean.adb: New test.

2008-11-07  Thomas Quinot  <quinot@adacore.com>

	* gnat.dg/hyper_flat.adb: New test.

2008-11-07  Geert Bosch  <bosch@adacore.com>

	* gnat.dg/test_8bitlong_overflow.adb: New test.

2008-11-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* g++.dg/ipa/iinline-1.C: Remove -c flag, add -fpie for PIC targets.
